Fix for overlapping validation messages and validation in start popups associated with a controller (single level section views only)
git-svn-id: https://svn.kuali.org/repos/student/trunk@16518 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-core/ks-common-ui/src/main/resources/org/kuali/student/common/ui/theme/standard/public/css/KSSection.css
+++ b/ks-core/ks-common-ui/src/main/resources/org/kuali/student/common/ui/theme/standard/public/css/KSSection.css
@@ -514,12 +514,21 @@ p.noted { margin: 0 0 10px 0; color: #39b54a; font-family: Georgia;}
 	padding-left: 20px; 
 }
 
+@if user.agent ie6 ie7 ie8 { 
+	.ks-form-module-validation li {
+		margin-left: 0;
+		padding: 3px 0;
+		height: 1%;
+		list-style: none;
+	}
+}
+
 .ks-form-module-validation li {
 	margin-left: 0;
 	padding: 3px 0;
-	height: 1%;
 	list-style: none;
 }
+
 
 .ks-form-module-validation-inline {
 	font-size: 1em;
@@ -537,10 +546,18 @@ p.noted { margin: 0 0 10px 0; color: #39b54a; font-family: Georgia;}
 	padding-left: 20px; 
 }
 
-.ks-form-module-validation-inline li {
+@if user.agent ie6 ie7 ie8 {  
+	.ks-form-module-validation-inline li {
 	margin-left: 0;
 	padding: 3px 0;
 	height: 1%;
+	list-style: none;
+	}
+}
+
+.ks-form-module-validation-inline li {
+	margin-left: 0;
+	padding: 3px 0;
 	list-style: none;
 }
 
